[gd_scene load_steps=31 format=2]

[ext_resource path="res://Assets/Images/boss.png" type="Texture" id=1]
[ext_resource path="res://Entities/Stats.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/Boss/Boss.gd" type="Script" id=3]
[ext_resource path="res://Entities/Boss/States/Intro.gd" type="Script" id=4]
[ext_resource path="res://Entities/Boss/States/Chase.gd" type="Script" id=5]
[ext_resource path="res://UI/BossHealth.tscn" type="PackedScene" id=6]
[ext_resource path="res://Entities/Boss/States/Death.gd" type="Script" id=7]
[ext_resource path="res://Entities/Boss/States/Teleport.gd" type="Script" id=8]
[ext_resource path="res://Assets/Audio/Sounds/snd_metal.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Audio/Sounds/snd_stomp.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/Audio/Sounds/snd_roar.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/Audio/Sounds/snd_portal.wav" type="AudioStream" id=12]
[ext_resource path="res://Entities/Boss/States/Range.gd" type="Script" id=13]
[ext_resource path="res://Entities/Boss/States/Slide.gd" type="Script" id=14]
[ext_resource path="res://Entities/Boss/States/SlideCharging.gd" type="Script" id=15]
[ext_resource path="res://Entities/Boss/States/Summon.gd" type="Script" id=16]
[ext_resource path="res://Assets/Audio/Sounds/snd_charging.wav" type="AudioStream" id=17]
[ext_resource path="res://Assets/Audio/Sounds/snd_static.wav" type="AudioStream" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 137, 24 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 42, 186 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 146, 33 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -213 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Healthbar:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 100 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Shadow:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "charged"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1.7, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.50001, -173.5 ), Vector2( 0.499997, -269.5 ), Vector2( 4.76837e-07, -187.5 ), Vector2( 0, -213 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1.7, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.28623, 0.814554 ), Vector2( 0.713768, 1.26526 ), Vector2( 1.05072, 0.880282 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "charging"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -213 ), Vector2( 0, -187 ), Vector2( 0.50001, -197 ), Vector2( -9.53674e-07, -178.5 ), Vector2( 8.34465e-06, -185.5 ), Vector2( 0.50001, -173.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.12319, 0.877934 ), Vector2( 1.08333, 0.924883 ), Vector2( 1.2029, 0.838028 ), Vector2( 1.17391, 0.870892 ), Vector2( 1.28623, 0.814554 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "chase"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 2.5 ),
"update": 0,
"values": [ Vector2( 0, -213 ), Vector2( 0.5, -201 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 2.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.15217, 0.943662 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "death"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -213 ), Vector2( -5.96046e-08, -191.857 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.34161, 0.900738 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "intro"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.537029, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1651 ), Vector2( 0, -213 ), Vector2( 1.14441e-05, -165.5 ), Vector2( 0, -213 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.537029, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.666667, 1 ), Vector2( 1.80435, 0.776995 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.0389949 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sounds/Stomp:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Shadow:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.470588 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "roar"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2 ),
"transitions": PoolRealArray( 1, 0.5, 1, 0.5, 1, 0.5, 1, 0.5, 1, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.23913, 0.828638 ), Vector2( 1, 1 ), Vector2( 1.23913, 0.828638 ), Vector2( 1, 1 ), Vector2( 1.23913, 0.828638 ), Vector2( 1, 1 ), Vector2( 1.23913, 0.828638 ), Vector2( 1, 1 ), Vector2( 1.23913, 0.828638 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2 ),
"transitions": PoolRealArray( 1, 0.5, 1, 0.5, 1, 0.5, 1, 0.5, 1, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, -213 ), Vector2( 3.8147e-06, -176.5 ), Vector2( 0, -213 ), Vector2( 3.8147e-06, -176.5 ), Vector2( 0, -213 ), Vector2( 3.8147e-06, -176.5 ), Vector2( 0, -213 ), Vector2( 3.8147e-06, -176.5 ), Vector2( 0, -213 ), Vector2( 3.8147e-06, -176.5 ), Vector2( 0, -213 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Healthbar:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 100 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sounds/Roar:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "teleport_away"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.0362319, 0.00704225 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sounds/Teleport:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shadow:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.470588 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "teleport_back"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.0362319, 0.00704225 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.470588 ) ]
}

[node name="Boss" type="KinematicBody2D" groups=["enemy"]]
z_index = 1
script = ExtResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 2 )]
max_health = 150

[node name="Healthbar" parent="." instance=ExtResource( 6 )]
layer = 0
offset = Vector2( 0, 100 )
transform = Transform2D( 1, 0, 0, 1, 0, 100 )

[node name="States" type="Node" parent="."]

[node name="Intro" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="Chase" type="Node" parent="States"]
script = ExtResource( 5 )

[node name="Teleport" type="Node" parent="States"]
script = ExtResource( 8 )

[node name="Range" type="Node" parent="States"]
script = ExtResource( 13 )

[node name="SlideCharging" type="Node" parent="States"]
script = ExtResource( 15 )

[node name="Slide" type="Node" parent="States"]
script = ExtResource( 14 )

[node name="Summon" type="Node" parent="States"]
script = ExtResource( 16 )

[node name="Death" type="Node" parent="States"]
script = ExtResource( 7 )

[node name="Shadow" type="ColorRect" parent="."]
margin_left = -165.0
margin_top = -31.0
margin_right = 171.0
margin_bottom = 16.0
color = Color( 0, 0, 0, 0 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -213 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -24 )
shape = SubResource( 1 )

[node name="CollisionBox" type="Area2D" parent="." groups=["collisionbox"]]
visible = false
position = Vector2( 0, -44 )
collision_layer = 2

[node name="CollisionBox" type="CollisionShape2D" parent="CollisionBox"]
position = Vector2( 11, -143 )
shape = SubResource( 2 )

[node name="HurtBox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( -1, -23 )
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/charged = SubResource( 10 )
anims/charging = SubResource( 11 )
anims/chase = SubResource( 4 )
anims/death = SubResource( 12 )
anims/intro = SubResource( 5 )
anims/roar = SubResource( 6 )
anims/teleport_away = SubResource( 8 )
anims/teleport_back = SubResource( 9 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="PlayerPointer" type="Node2D" parent="."]
visible = false
position = Vector2( 0, -9 )

[node name="Position2D" type="Position2D" parent="PlayerPointer"]
position = Vector2( 100, 0 )

[node name="Timers" type="Node" parent="."]

[node name="PathfindingTimer" type="Timer" parent="Timers"]
wait_time = 0.2
autostart = true

[node name="FireballTimer" type="Timer" parent="Timers"]
wait_time = 0.75
one_shot = true

[node name="CooldownTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="ChaseTimer" type="Timer" parent="Timers"]
wait_time = 3.0
one_shot = true

[node name="RangeTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="SlideTimer" type="Timer" parent="Timers"]
wait_time = 3.0
one_shot = true

[node name="DeathTimer" type="Timer" parent="Timers"]
wait_time = 3.0
one_shot = true

[node name="Sounds" type="Node" parent="."]

[node name="Hit" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )

[node name="Stomp" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 10 )

[node name="Roar" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 11 )

[node name="Teleport" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 12 )

[node name="Charging" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 17 )
pitch_scale = 2.0

[node name="Static" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 18 )

[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timers/PathfindingTimer" to="." method="_on_PathfindingTimer_timeout"]
